change applications to dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
     <section class="app-body">
       <header class="app-nav-group">
         <ul class="nav-group">
-          <li class="nav-group-item"><a class="active" href="#">Application</a></li>
+          <li class="nav-group-item"><a class="active" href="#">Dashboard</a></li>
           <li class="nav-group-item"><a class="" href="#">Team</a></li>
           <li class="nav-group-item"><a class="" href="#">Travel</a></li>
         </ul>
